Updated footer by adding buttons

--- a/CodeBase/index.html
+++ b/CodeBase/index.html
@@ -214,17 +214,11 @@
   <footer id="footer">
 
     <p>© Copyright 2018 Cris</p>
-    <i class="fab fa-linkedin"></i>
-    <a href="https://www.linkedin.com/in/ayush-pandey-974393193/">Linkedin</a>
-    <i class="fab fa-github"></i>
-    <a href="https://github.com/Ayush7-BIT/Ayush7-BIT">Github</a>
-    <i class="fab fa-twitter"></i>
-    <a href="https://twitter.com/AyushPa69252884">Twitter</a>
-    <i class="fas fa-envelope"></i>
-    <a href="mailto:arvindpan1311@gmail.com">Contact Me</a>
-
+    <button class="footer-button"><i class="fab fa-linkedin"> <a href="https://www.linkedin.com/in/ayush-pandey-974393193/">Linkedin</a> </i></button>
+    <button class="footer-button"><i class="fab fa-github"> <a href="https://github.com/Ayush7-BIT/Ayush7-BIT">Github</a> </i></button>
+    <button class="footer-button"><i class="fab fa-twitter"> <a href="https://twitter.com/AyushPa69252884">Twitter</a> </i></button>
+  <button class="footer-button"><i class="fas fa-envelope"> <a href="mailto:arvindpan1311@gmail.com">Contact Me</a> </i></button>
   </footer>
-
 
 </body>
 
