--- a/CodeBase/index.html
+++ b/CodeBase/index.html
@@ -136,8 +136,9 @@
 
   <!-- Pricing -->
   <section id="pricing">
+    <h2 class="pricing">A Plan for Every Dog's Needs</h2>
+    <p class="dog">Simple and affordable price plans for you and your dog.</p>
   <div class="pricing-container">
-      <div class="col-sm-3">
         <div class="pricing-table">
           <div class="tb-border"></div>
           <div class="lr-border"></div>
@@ -159,8 +160,6 @@
             <button>Choose Plan</button>
            </div>
         </div>
-      </div>
-      <div class="col-sm-3">
         <div class="pricing-table">
           <div class="tb-border"></div>
           <div class="lr-border"></div>
@@ -182,8 +181,6 @@
             <button>Choose Plan</button>
            </div>
         </div>
-      </div>
-      <div class="col-sm-3">
         <div class="pricing-table">
           <div class="tb-border"></div>
           <div class="lr-border"></div>
@@ -205,7 +202,6 @@
             <button>Choose Plan</button>
            </div>
         </div>
-      </div>
       </div>
      
   </section>
