--- a/CodeBase/index.html
+++ b/CodeBase/index.html
@@ -139,23 +139,41 @@
     <h2 class="pricing">A Plan for Every Dog's Needs</h2>
     <p class="dog">Simple and affordable price plans for you and your dog.</p>
   <div class="pricing-container">
+    <div class="pricing-table">
+      <div class="tb-border"></div>
+      <div class="lr-border"></div>
+      <div class="pricing-inner">
+         <div class="plan-name">
+          <p><i class="fas fa-paw fa-4x pricing-icons"></i></p>
+          <p>Chihuahua</p>
+         </div>
+        <div class="plan-price-container">
+          <p class="plan-price">FREE</p>
+        </div>
+        <div class="plan-desc">
+           <p>5 matches per day</p>
+            <p>10 messages per day</p>
+          <p>Unlimited app usage</p>
+        </div>
+        <button>Choose Plan</button>
+       </div>
+    </div>
         <div class="pricing-table">
           <div class="tb-border"></div>
           <div class="lr-border"></div>
           <div class="pricing-inner">
              <div class="plan-name">
-              <p><i class="fa fa-bone fa-4x good-option"></i></p>
-              <small>Basic</small>
+              <p><i class="fa fa-bone fa-4x pricing-icons"></i></p>
+              <p>Labrador</p>
              </div>
             <div class="plan-price-container">
-              <p class="plan-price">999<sup><small>$</small></sup></p>
+              <p class="plan-price">49<sup><small>$</small></sup>/mo</p>
             </div>
             <div class="plan-desc">
-               <p>Unlimited Access</p>
-                <p>100GB Storage</p>
-              <p>Limited Customer Support</p>
-              <p>Forum Access</p>
-              <p>Unlimited Downloads</p>
+               <p>Unlimited matches</p>
+                <p>Unlimited messages</p>
+              <p>Unlimited app usage</p>
+
             </div>
             <button>Choose Plan</button>
            </div>
@@ -165,43 +183,22 @@
           <div class="lr-border"></div>
           <div class="pricing-inner">
              <div class="plan-name">
-              <p><i class="fas fa-dog fa-4x good-option"></i></p>
+              <p><i class="fas fa-dog fa-4x pricing-icons"></i></p>
               <small>Professional</small>
              </div>
             <div class="plan-price-container">
-              <p class="plan-price">1299<sup><small>$</small></sup></p>
+              <p class="plan-price">99<sup><small>$</small></sup>/mo</p>
             </div>
             <div class="plan-desc">
-               <p>Unlimited Access</p>
-                <p>100GB Storage</p>
-              <p>Limited Customer Support</p>
-              <p>Forum Access</p>
-              <p>Unlimited Downloads</p>
+              <p>Priority listing</p>
+              <p>Unlimited matches</p>
+              <p>Unlimited messages</p>
+            <p>Unlimited app usage</p>
             </div>
             <button>Choose Plan</button>
            </div>
         </div>
-        <div class="pricing-table">
-          <div class="tb-border"></div>
-          <div class="lr-border"></div>
-          <div class="pricing-inner">
-             <div class="plan-name">
-              <p><i class="fas fa-paw fa-4x good-option"></i></p>
-              <small>Premium</small>
-             </div>
-            <div class="plan-price-container">
-              <p class="plan-price">1499<sup><small>$</small></sup></p>
-            </div>
-            <div class="plan-desc">
-               <p>Unlimited Access</p>
-                <p>100GB Storage</p>
-              <p>Limited Customer Support</p>
-              <p>Forum Access</p>
-              <p>Unlimited Downloads</p>
-            </div>
-            <button>Choose Plan</button>
-           </div>
-        </div>
+        
       </div>
      
   </section>
