--- a/CodeBase/index.html
+++ b/CodeBase/index.html
@@ -184,7 +184,7 @@
           <div class="pricing-inner">
              <div class="plan-name">
               <p><i class="fas fa-dog fa-4x pricing-icons"></i></p>
-              <small>Professional</small>
+            <p>Mastiff</p>
              </div>
             <div class="plan-price-container">
               <p class="plan-price">99<sup><small>$</small></sup>/mo</p>
