--- a/CodeBase/index.html
+++ b/CodeBase/index.html
@@ -212,16 +212,15 @@
   <!-- Footer -->
 
   <footer id="footer">
-
-    <p>© Copyright 2018 Cris</p>
     <i class="fab fa-linkedin"></i>
-    <a href="https://www.linkedin.com/in/ayush-pandey-974393193/">Linkedin</a>
+    <a href="https://www.linkedin.com/in/ayush-pandey-974393193/">LinkedIn</a>
     <i class="fab fa-github"></i>
-    <a href="https://github.com/Ayush7-BIT/Ayush7-BIT">Github</a>
+    <a href="https://github.com/Ayush7-BIT/Ayush7-BIT">GitHub</a>
     <i class="fab fa-twitter"></i>
     <a href="https://twitter.com/AyushPa69252884">Twitter</a>
     <i class="fas fa-envelope"></i>
     <a href="mailto:arvindpan1311@gmail.com">Contact Me</a>
+    <p>© Copyright 2018 Cris</p>
 
   </footer>
 
