--- a/CodeBase/index.html
+++ b/CodeBase/index.html
@@ -81,7 +81,7 @@
       
       <div class="cardd 2" style="margin-top: 10%; margin-bottom: 10%;">
         <div class="cardd_image">
-           <i class="fas fa-check-circle fa-4x good-option" style="padding-left: 40%; padding-top: 15%;"></i>
+           <i class="fas fa-bullseye fa-4x good-option" style="padding-left: 40%; padding-top: 15%; color: black;"></i>
            <p style="text-align: center;">
             So easy to use, even your dog could do it.
            </p>
@@ -93,7 +93,7 @@
       
       <div class="cardd 3" style="margin-top: 10%; margin-bottom: 10%;">
         <div class="cardd_image">
-           <i class="fas fa-check-circle fa-4x good-option" style="padding-left: 40%; padding-top: 15%;"></i>
+           <i class="fas fa-heart fa-4x good-option" style="padding-left: 40%; padding-top: 15%; color: black;"></i>
            <p style="text-align: center;">
             So easy to use, even your dog could do it.
            </p>
