--- a/CodeBase/index.html
+++ b/CodeBase/index.html
@@ -82,12 +82,12 @@
       <div class="cardd 2" style="margin-top: 10%; margin-bottom: 10%;">
         <div class="cardd_image">
            <i class="fas fa-bullseye fa-4x good-option" style="padding-left: 40%; padding-top: 15%; color: black;"></i>
-           <p style="text-align: center;">
-            So easy to use, even your dog could do it.
+           <p style="text-align: center; color: aliceblue; margin: 5%;">
+            We have all the dogs, the greatest dogs.
            </p>
            </div>
         <div class="cardd_title title-white">
-          <p>EASY TO USE</p>
+          <p>Elite Clientele</p>
         </div>
       </div>
       
@@ -95,11 +95,11 @@
         <div class="cardd_image">
            <i class="fas fa-heart fa-4x good-option" style="padding-left: 40%; padding-top: 15%; color: black;"></i>
            <p style="text-align: center;">
-            So easy to use, even your dog could do it.
+            Find the love of your dog's life or your money back.
            </p>
            </div>
         <div class="cardd_title title-white">
-          <p>EASY TO USE</p>
+          <p>Guaranteed to work</p>
         </div>
       </div>
   
