--- a/CodeBase/index.html
+++ b/CodeBase/index.html
@@ -70,36 +70,36 @@
       <div class="cardd 1" style="margin-top: 10%; margin-bottom: 10%;background-color: aquamarine;">
         <div class="cardd_image">
            <i class="fas fa-check-circle fa-4x good-option" style="padding-left: 40%; padding-top: 15%; color: black;"></i>
-           <p style="text-align: center; margin: 5%; color: aliceblue;">
+           <p style="text-align: center; margin: 5%; color: aliceblue;  font-size: 20px;">
             So easy to use, even your dog could do it.
            </p>
            </div>
         <div class="cardd_title title-white">
-          <p style="color: black;">Easy to Use</p>
+          <p style="color:#3f004e;">Easy to Use</p>
         </div>
       </div>
       
       <div class="cardd 2" style="margin-top: 10%; margin-bottom: 10%;">
         <div class="cardd_image">
            <i class="fas fa-bullseye fa-4x good-option" style="padding-left: 40%; padding-top: 15%; color: black;"></i>
-           <p style="text-align: center; color: aliceblue; margin: 5%; ">
+           <p style="text-align: center; color: aliceblue; margin: 5%; font-size: 20px; ">
             We have all the dogs, the greatest dogs.
            </p>
            </div>
         <div class="cardd_title title-white">
-          <p style="color: black;">Elite Clientele</p>
+          <p style="color:#3f004e; font-style:oblique;">Elite Clientele</p>
         </div>
       </div>
       
       <div class="cardd 3" style="margin-top: 10%; margin-bottom: 10%;">
         <div class="cardd_image">
            <i class="fas fa-heart fa-4x good-option" style="padding-left: 40%; padding-top: 15%; color: black;"></i>
-           <p style="text-align: center; margin: 5%; color: aliceblue;">
-            Find the love of your dog's life or your money back.
+           <p style="text-align: center; margin: 5%; color: aliceblue; font-size: 20px; margin-top: 2%;">
+            Find the love of your dog's life or get money back.
            </p>
            </div>
         <div class="cardd_title title-white">
-          <p style="color: rgb(0, 0, 0);">Assured</p>
+          <p style="color:#3f004e;">Assured</p>
         </div>
       </div>
   
