--- a/CodeBase/index.html
+++ b/CodeBase/index.html
@@ -87,19 +87,19 @@
            </p>
            </div>
         <div class="cardd_title title-white">
-          <p style="color:#3f004e; font-style:oblique;">Elite Clientele</p>
+          <p style="color:#3f004e; ">Elite Clientele</p>
         </div>
       </div>
       
       <div class="cardd 3" style="margin-top: 10%; margin-bottom: 10%;">
         <div class="cardd_image">
            <i class="fas fa-heart fa-4x good-option" style="padding-left: 40%; padding-top: 15%; color: black;"></i>
-           <p style="text-align: center; margin: 5%; color: aliceblue; font-size: 20px; margin-top: 2%;">
+           <p style="text-align: center; margin: 5%; color: aliceblue; font-size: 20px; margin-top: 1px;">
             Find the love of your dog's life or get money back.
            </p>
            </div>
         <div class="cardd_title title-white">
-          <p style="color:#3f004e;">Assured</p>
+          <p style="color:#3f004e;">Guaranteed</p>
         </div>
       </div>
   
