--- a/CodeBase/index.html
+++ b/CodeBase/index.html
@@ -214,7 +214,7 @@
 
   <section id="cta">
 
-    <h3>Find the True Love of Your Dog's Life Today.</h3>
+    <h3>Find the True Love of Your Dog's Life Today.</h3><br>
     <button class="btc btn btn-outline-dark" type="button"><i class="fab fa-apple"></i> Download</button>
     <button class="btc btn btn-dark" type="button"><i class="fab fa-google-play"></i> Download</button>
 
