Footer has been modified.

--- a/CodeBase/index.html
+++ b/CodeBase/index.html
@@ -223,7 +223,7 @@
 
   <!-- Footer -->
 
-  <footer id="footer">
+ <!--  <footer id="footer">
     <i class="fab fa-linkedin"></i>
     <a href="https://www.linkedin.com/in/ayush-pandey-974393193/">LinkedIn</a>
     <i class="fab fa-github"></i>
@@ -234,7 +234,17 @@
     <a href="mailto:arvindpan1311@gmail.com">Contact Me</a>
     <p>© Copyright 2018 Cris</p>
 
-  </footer>
+  </footer> -->
+
+  <br>
+  <div class="social">
+  <a href="https://www.linkedin.com/in/ayush-pandey-974393193/" class="link linkedin" target="_parent"><span class="fab fa-linkedin"></span></a>
+  <a href="https://twitter.com/AyushPa69252884" class="link twitter" target="_parent"><span class="fa fa-twitter"></span></a>
+  <a href="https://github.com/Ayush7-BIT/Ayush7-BIT" class="link github" target="_parent"><span class="fab fa-github"></span></a>
+  <a href="mailto:arvindpan1311@gmail.com" class="link email" target="_parent"><span class="fa fa-envelope"></span></a>
+  <br>
+  <p>&copy; 2020 CRIS<p>
+</div>
 
 
 </body>
