--- a/CodeBase/index.html
+++ b/CodeBase/index.html
@@ -16,7 +16,7 @@
 
 <body>
   <section id="title">
-    <div class="container-fluid">
+    <div class="container-fluid" id="home">
     <nav class="navbar bg-dark navbar-expand-lg navbar-dark">
     <a class="navbar-brand" href="">CR7</a>
      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -25,13 +25,16 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-            <a class="nav-link" href="#footer">Contact</a>
+          <a class="nav-link" href="#home">Home</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#pricing">Pricing</a>
+          <a class="nav-link" href="#pricing">Pricing</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#cta">Download</a>
+          <a class="nav-link" href="#cta">Download</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#footer">Contact</a>
         </li>
     </ul>
  </div>
@@ -221,7 +224,7 @@
   <!-- Footer -->
 
   <br>
-  <div class="social">
+  <div class="social" id="footer">
   <a href="https://www.linkedin.com/in/ayush-pandey-974393193/" class="link linkedin" target="_parent"><span class="fab fa-linkedin"></span></a>
   <a href="https://twitter.com/AyushPa69252884" class="link twitter" target="_parent"><span class="fa fa-twitter"></span></a>
   <a href="https://github.com/Ayush7-BIT/Ayush7-BIT" class="link github" target="_parent"><span class="fab fa-github"></span></a>
